# python-cpp-interop

./: .gitignore  CMakeLists.txt  README.md  calculations_cpp.pyi  main.py  pybind_wrapper.cpp  requirements.txt
